<resources>
    <string name="_1_please_select_pesticide">1. Please select pesticide:</string>
    <string name="_2_please_set_the_spry_duration">2. Please set the spry duration:</string>
    <string name="_2_turn_on_bluetooth">2. Turn on <b>Bluetooth</b>.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal_weather_spraying_setting">Abnormal weather spraying setting</string>
    <string name="about_moogo">About Moogo</string>
    <string name="about_us">About Us</string>
    <string name="about_us_content1">Designed specifically for effective outdoor mosquito control, Moogo was built to revolutionize the fight against mosquitoes and biting insects. Our company was founded with innovation at its forefront, with the goal of creating an intelligent mosquito control solution that is both eco-friendly and safe for the entire family.</string>
    <string name="about_us_content2">Whether it’s a picnic in the backyard, or a quiet evening stroll through your garden, enjoy the outdoors worry-free with Moogo - as your reliable defense against harmful pests. Schedule concentrate sprays with ease at preferred times or intervals, via a single control panel. The Moogo Misting System can be conveniently installed around your backyard or other outdoor spaces for targeted sprays, ridding mosquitoes from your outdoor activities for good.</string>
    <string name="about_us_title">Witness the New Era of Mosquito Control</string>
    <string name="accept">Accept</string>
    <string name="accept_invite_content" formatted="false">"%s %s invited you %s to use Mosquito Misting System (Device name: %s). Please click the button below to accept or reject the invitation.
Thanks.


Best regards,
Moogo Team"</string>
    <string name="accept_invite_title">Hi:</string>
    <string name="accept_invite_title1">Dear %s.</string>
    <string name="accepted_at">Accepted at</string>
    <string name="access_shared_successfully">Access shared successfully</string>
    <string name="accessories">Accessories</string>
    <string name="account_settings">Account Settings</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_device">Add Device</string>
    <string name="add_device_connecting_tips">"Pairing in progress: please don't turn off power or internet connection."</string>
    <string name="add_device_help1_content1">It may be because the current network environment is poor or the device has been bound by others.</string>
    <string name="add_device_help1_content2">1. Please ensure the antenna is placed vertically, close to the Wi-Fi hotspot without obstruction, and in an open area away from metal objects.</string>
    <string name="add_device_help1_content3">2. Please make sure that the distance between the mobile phone and the device is close enough, and there is no strong interference in the surrounding network environment.</string>
    <string name="add_device_help1_content4">"3. If the device still cannot be found, it may be because the device has been bound by someone else. If you don't know who connected the device, you can reset it. To reset, please refer to the manual, or contact customer service personnel."</string>
    <string name="add_device_help1_content5">4. For the Bluetooth device, please check whether the device is turned on normally, it is in the interface waiting for binding connection, and confirm whether the Bluetooth of the mobile phone is turned on.</string>
    <string name="add_device_help1_title">What should I do if the device to be added cannot be scanned?</string>
    <string name="add_device_help2_content1">1. When the device is reset and connected to the phone again, please go to the phone system settings page, unpair the paired devices in the Bluetooth list, and then try to connect again.</string>
    <string name="add_device_help2_content2">2. If the above methods still fail to connect to the device, try to restart the device or mobile phone, or contact customer service staff for help if necessary.</string>
    <string name="add_device_help2_title">What should I do if the device connection fails?</string>
    <string name="add_more_devices">+ Add More Devices</string>
    <string name="add_repeat">Add Repeat</string>
    <string name="add_schedule">+ Add Schedule</string>
    <string name="add_user">+ Add User</string>
    <string name="all">All</string>
    <string name="allow_nearby_devices_permission">1. Allow \"<b>Nearby devices</b>\" permission for this app.</string>
    <string name="already_hava_account">Already have an account?</string>
    <string name="already_sign_up">Don’t have a account yet?</string>
    <string name="an_existing_update_is_waiting_for_you">An existing update is waiting for you!</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Moogo</string>
    <string name="app_new_version_title">Download the latest version of Moogo:</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_to_log_out">Are you sure to Log Out.</string>
    <string name="authority">Authority</string>
    <string name="authority_tips">You may invite up to 5 additional users</string>
    <string name="available">Available</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bt_disable_msg">Bluetooth is disable!</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="cancel">Cancel</string>
    <string name="check_device_connection">Check Device Connection:</string>
    <string name="check_device_connection_content">Ensure that your hardware device is properly connected to both the power source and the app.</string>
    <string name="close">Close</string>
    <string name="contact_support">Contact Support:</string>
    <string name="contact_support_content">If the issue persists or you need any assistance, feel free to contact our dedicated support team.</string>
    <string name="customer_service">Customer Service</string>
    <string name="device_monitoring_no_nwater_inflow">Device Monitoring No Water Inflow</string>
    <string name="device_name">Device Name</string>
    <string name="got_it">Got It</string>
    <string name="low_temperature_alert">Low temperature Alert</string>
    <string name="new_device">New Device</string>
    <string name="new_device_test_tips">You are detected as a first-time user. Self-testing is recommended.</string>
    <string name="no_water_in_check">"1. Closed tap or water supply stoppage.
2. Loose or leaking joints.
3. Clogged filter in the Hose Bib Adapter.
Any other unusual situations."</string>
    <string name="please_check_for">Please check for:</string>
    <string name="rename_device">Rename the Device</string>
    <string name="retry_firmware_upgrade">Retry Firmware Upgrade:</string>
    <string name="retry_firmware_upgrade_content">Please attempt the firmware upgrade again by accessing the firmware upgrade section in the app. Ensure that you have a strong network connection during the process.</string>
    <string name="save">Save</string>
    <string name="self_test_help1_content">Accumulated dirt or debris can block the nozzles, hindering water flow and spray perfomance.</string>
    <string name="self_test_help1_title">1. Clogged Nozzles</string>
    <string name="self_test_help2_content">Inadequate water pressure can result in weak spraying or failure, and affect coverage of areas.</string>
    <string name="self_test_help2_title">2. Low Water Pressure</string>
    <string name="self_test_help3_content">Insufficient or interrupted water supply can result in non-functioning sprinklers.</string>
    <string name="self_test_help3_title">3. Water Supply Issues</string>
    <string name="self_test_help4_content">Leaks along the piping can reduce water flow, leading to inconsistent spraying or failure.</string>
    <string name="self_test_help4_title">4. Pipe Leaks</string>
    <string name="self_test_help5_content">Objects obstructing pipes can restrict water flow and prevent spraying.</string>
    <string name="self_test_help5_title">5. Pipe Blockages</string>
    <string name="self_test_help6_content">In cold weather, frozen water in the pipes can prevent sprinklers from working normally.</string>
    <string name="self_test_help6_title">6. Freezing Conditions</string>
    <string name="self_test_help7_content">For systems that use concentrates, low concentrate levels can lead to inadequate spraying, and impact the effectiveness of pest control.</string>
    <string name="self_test_help7_title">7. Low Concentrate Level</string>
    <string name="self_test_help_title">Problems that may Occur:</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="tips_temperature_below8_1">The temperature of the device is below 46℉.</string>
    <string name="tips_temperature_below8_2">It is now locked and spraying cannot be performed. Please turn off the device and store it indoors.</string>
    <string name="to_resolve_the_issue">To resolve the issue:</string>
    <string name="verify_network_connection">Verify Network Connection:</string>
    <string name="verify_network_connection_content">Make sure your mobile device has a stable and reliable internet connection during the upgrade process.</string>
</resources>