<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bg_center_popup" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/textPrimary" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/device_monitoring_no_nwater_inflow" android:fontFamily="@font/opensans_bold" android:layout_marginStart="45.0dip" android:layout_marginEnd="45.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="@color/textPrimary60" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/please_check_for" android:fontFamily="@font/opensans_regular" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="@color/textPrimary60" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/no_water_in_check" android:fontFamily="@font/opensans_regular" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" />
    <TextView android:id="@id/btn_close" android:layout_marginTop="13.0dip" android:layout_marginBottom="18.0dip" android:text="@string/close" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" style="@style/CommonButton" />
</LinearLayout>
